--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,11 @@
 	<h1>Hi, {{ current_user.username }}!</h1>
 	{% for post in posts %}
 	<div>
-		<p>{{ post.author.username }} says:<br>
+		<p>{{ post.author.username }} says:<br></p>
+		<a href="{{ url_for('fullpost',year=post.timestamp.year,month=post.timestamp.month,day=post.timestamp.day,slug=post.returnSlug()) }}">
 		{{ post.title }}
-		<b>{{ post.body }}</b></p></div>
+		</a>
+		{{ post.body|safe|truncate(300, True) }}
+	</div>
 	{% endfor %}
 {% endblock %}
