--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,42 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h1>Welcome</h1>
-	{% for post in posts %}
-	<div>
-		<a href="{{ url_for('fullpost',year=post.timestamp.year,month=post.timestamp.month,day=post.timestamp.day,slug=post.slug) }}">
-		{{ post.title }}
-		</a><br>
-		{{ post.author.username }}
-		{{ post.body|safe|truncate(300, True) }}
+	
+	<div class = "container">
+		<div class = "row">
+			<div class="col-lg-6">
+				{% for post in posts %}
+				<h3>
+					<a href="{{ url_for('fullpost',year=post.timestamp.year,month=post.timestamp.month,day=post.timestamp.day,slug=post.slug) }}">
+					{{ post.title }}
+					</a><br>
+				</h3>
+				<span class="badge badge-primary">
+					Posted by: {{ post.author.username }} at {{ post.timestamp }}
+				</span>
+					{{ post.body|safe|truncate(300, True) }}
+				{% endfor %}
+				<nav aria-label="...">
+					<ul class="pager">
+						<li class="previous{% if not prev_url %} disabled{% endif %}">
+							<a href="{{ prev_url or '#' }}">
+								<span aria-hidden="true">&larr;</span> Newer posts
+							</a>
+						</li>
+						<li class="next{% if not next_url %} disabled{% endif %}">
+							<a href="{{ next_url or '#' }}">
+								Older posts <span aria-hidden="true">&rarr;</span>
+							</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<div class = "col-lg-6">
+				{% for post in posts %}
+				{{ post.body }}
+				{% endfor %}
+			</div>
+		</div>
 	</div>
-	{% endfor %}
+
 {% endblock %}
