--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<p>{{ post.author.username }} says:<br></p>
-	{{ post.title }}
-	{{ post.body|safe}}
+	<div class = "container">
+		<h2>{{ post.title }} <span class="badge badge-secondary">{{ post.timestamp }}</span></h2>
+		<p>{{ post.author.username }} says:<br></p>
+		{{ post.body|safe}}
+	</div>
 {% endblock %}
